[project]
name = "A_Share_investment_Agent"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "langchain==0.3.0",
    "langchain-openai==0.2.11",
    "langgraph==0.2.56",
    "pandas>=2.1.0,<3",
    "numpy>=1.24.0,<2",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2,<4",
    "yfinance>=0.2.51,<0.3",
    "akshare>=1.11.22,<2",
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.3,<5",
    "openai>=1.12.0,<2",
    "langchain-core>=0.3.29,<0.4",
    "google-generativeai>=0.3.0,<0.4",
    "backoff>=2.2.1,<3",
    "google-genai>=0.6.0,<0.7",
    "uvicorn>=0.34.0,<0.35",
    "fastapi>=0.115.12,<0.116",
    "playwright>=1.52.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.1.0,<7",
]

[tool.uv]

[[tool.uv.index]]
name = "mirrors"
url = "https://repo.huaweicloud.com/repository/pypi/simple"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
